Initial 1.8.9 implementation